--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@mikesven/signals-slots",
   "version": "0.0.1",
   "description": "Signals and Slots pattern implemented in TS",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "vitest"
   },
